--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "vue": "^2.6.14",
+    "vue-simple-search-dropdown": "^1.0.1",
     "webpack": "^4.46.0"
   }
 }
