--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "nuxt": "^2.15.7",
     "vue": "^2.6.14",
     "vue-simple-search-dropdown": "^1.0.1",
+    "vue-slick-carousel": "^1.0.6",
     "webpack": "^4.46.0"
+  },
+  "devDependencies": {
+    "vue-agile": "^1.1.3"
   }
 }
